# dioxus_html_rsx

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  justfile  tailwind.config.js
.github/workflows/: gh_pages.yml
assets/: main.css
docs/: index.html
docs/assets/: dioxus_html_rsx-7a807a1cd959c04e.js  dioxus_html_rsx-7a807a1cd959c04e.js.br  dioxus_html_rsx_bg-7996fe9ab82be9e7.wasm  dioxus_html_rsx_bg-7996fe9ab82be9e7.wasm.br  dioxus_html_rsx_bg-8df028cf34b50025.wasm  dioxus_html_rsx_bg-8df028cf34b50025.wasm.br  tailwind-b3daa563bdc73c1e.css
docs/assets/index/: 66c7cea6.html
docs/wasm/: dioxus_html_rsx.d.ts  dioxus_html_rsx.d.ts.br  dioxus_html_rsx.js  dioxus_html_rsx.js.br  dioxus_html_rsx_bg.wasm  dioxus_html_rsx_bg.wasm.br  dioxus_html_rsx_bg.wasm.d.ts  dioxus_html_rsx_bg.wasm.d.ts.br
docs/wasm/snippets/dioxus-interpreter-js-161bb2cc5b21a4da/: inline0.js  inline0.js.br
docs/wasm/snippets/dioxus-interpreter-js-4f3bdb922bc47527/: inline0.js  inline0.js.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
public/: tailwind.css
src/: main.rs  syntax_highlight.rs
static/index/: 669adc7c.html
