[package]
name = "dioxus_html_rsx"
version = "0.1.0"
edition = "2021"

[dependencies]

dioxus = { version = "0.6.1", features = ["web"] }
serde = { version = "1.0.216", features = ["derive"] }
dioxus-rsx-rosetta = { version = "0.6.1" }
dioxus-autofmt = { version = "0.6.1" }


[profile.dev]
split-debuginfo = "unpacked"
opt-level = 0
debug = 0
strip = "debuginfo"
incremental = true
overflow-checks = false
lto = "thin"
panic = "unwind"
